# wirewan

./: .gitignore  LICENSE  README.md  SPEC.md  docker-compose.yml  run.sh
backend/: .env  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/endpoints/: auth.py  deployments.py  peers.py  services.py  wan.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  api_log.py  config_history.py  connection.py  deployment.py  peer.py  service.py  subnet.py  user.py  wan.py
backend/app/schemas/: __init__.py  deployment.py  peer.py  service.py  subnet.py  user.py  wan.py
backend/app/services/: __init__.py  config_generator.py  conflict_detection.py  deployment.py  ip_allocation.py  mikrotik_client.py  pihole.py  wireguard.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx  NetworkTopology.tsx
frontend/src/pages/: Dashboard.tsx  Jobs.tsx  PeerDetail.tsx  Services.tsx  WanDetail.tsx  WanList.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
